Edit class names and message positioning

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
       <section class="selection-box">
         <div class="message-choices">
           <div>
-            <input type="radio" class="radio-button deselect-proof">
+            <input type="radio" class="radio-affirmation deselect-proof">
             <label class="affirmation deselect-proof">affirmation</label>
           </div>
           <div>
-            <input type="radio" class="radio-button deselect-proof">
+            <input type="radio" class="radio-mantra deselect-proof">
             <label class="mantra deselect-proof">mantra</label>
           </div>
         </div>
