Disable receive message button and small fixes

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
         <div class="message-choices">
           <div>
             <input type="radio" class="radio-affirmation">
-            <label class="affirmation deselect-proof">affirmation</label>
+            <label class="affirmation">affirmation</label>
           </div>
           <div>
             <input type="radio" class="radio-mantra">
-            <label class="mantra deselect-proof">mantra</label>
+            <label class="mantra">mantra</label>
           </div>
         </div>
         <div class="receive-button-position">
-          <button class="receive-message-button">Receive Message</button>
+          <button class="receive-message-button" disabled>Receive Message</button>
         </div>
       </section>
     </section>
